# GateWA

./: .env.example  .env.minimal  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml  release.yml
dashboard/: README.md  index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/components/: Layout.tsx  Toast.tsx
dashboard/src/hooks/: useDocumentTitle.ts  useRole.tsx  useTheme.ts  useWebSocket.ts
dashboard/src/i18n/: index.ts
dashboard/src/pages/: Infrastructure.tsx  Login.tsx
dashboard/src/services/: api.ts
deploy/: .env.vps  DEPLOYMENT-GUIDE.md  QUICK-REFERENCE.md  docker-compose.vps.yml  setup-vps.sh
docs/: 01-project-overview.md  02-requirements-specification.md  03-system-architecture.md  04-security-design.md  05-database-design.md  06-api-specification.md  07-api-collection.md  08-development-guidelines.md  09-testing-strategy.md  10-devops-infrastructure.md  11-operational-runbooks.md  12-troubleshooting-faq.md  13-horizontal-scaling.md  14-migration-guide.md  15-project-roadmap.md  16-risk-management.md  17-dashboard-design.md  18-sdk-design.md  19-plugin-architecture.md  20-community-guidelines.md  21-glossary.md  22-n8n-integration.md  README.md
scripts/: gatewa.sh
sdk/: README.md
sdk/javascript/: package.json
sdk/python/: pyproject.toml
sdk/python/gatewa/: __init__.py
src/: app.module.ts  main.ts
src/config/: configuration.ts
src/database/: data-source.ts
traefik/: dynamic.yml
(+14 files in other folders)
